--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Math Quiz</title>
-        <script src="app.js" defer></script>
+        
     </head>
 
     <body onload="main()">
@@ -14,7 +14,16 @@
             <h2>Questions</h2>
 
             <h3>Question <span id="questionNum"></span></h3>
-            <form onsubmit="capture()">
+
+            <label for="input" action="app.js" method="post">
+                <span id="num1">num1</span><span> + </span><span id="num2">num2</span> <span> = </span>
+            </label>
+
+            <input type="number" id="input" name="input" min="1" max="200"/>
+            <input type="submit" value="Submit" id="submit"/>
+
+        <!--
+            <form onsubmit="capture()" id="form">
                 <label for="input" action="app.js" method="post">
                     <span id="num1">num1</span><span> + </span><span id="num2">num2</span> <span> = </span>
                 </label>
@@ -22,12 +31,15 @@
                 <input type="number" id="input" name="input" min="1" max="200"/>
                 <input type="submit" value="Submit"/>
             </form>
+        -->
 
-            <p id="response"></p>
+            <div id="response"></div>
         </main>
 
         <footer>
             <p>A simple addition practice quiz site.</p>
         </footer>
+
+        <script src="app.js"></script>
     </body>
 </html>
