--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </label>
 
             <input type="number" id="input" name="input" min="1" max="200"/>
-            <input type="submit" value="Submit" id="submit"/>
+            <input type="submit" value="Submit" id="submit" onclick="capture()"/>
 
         <!--
             <form onsubmit="capture()" id="form">
