Difficulty bug fix

--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     </head>
 
     <body onload="main()">
-        <header>
+        <header class="header">
             <h1>Math Quiz</h1>
         </header>
 
         <main>
-            <h2>Questions</h2>
-
-            <h3>Question <span id="questionNum"></span></h3>
+            <h2>Question <span id="questionNum"></span></h2>
 
             <label for="input" action="app.js" method="post">
                 <span id="num1">num1</span><span> + </span><span id="num2">num2</span> <span> = </span>
@@ -36,7 +34,7 @@
             <div id="response"></div>
         </main>
 
-        <footer>
+        <footer class="footer">
             <p>A simple addition practice quiz site.</p>
         </footer>
 
