Modules created but buggy

--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
             <p>A simple addition practice quiz site.</p>
         </footer>
 
-        <script src="app.js"></script>
+        <script type="module" src="app.js"></script>
     </body>
 </html>
