--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>Math Quiz</title>
+
+        <meta charset="UTF-8"/>
+        <meta name="description" content="This is a free math addition quiz site"/>
+        <meta name="keywords" content="Math, HTML, CSS, JavaScript, Free, Quiz, Addition"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
         <link rel="stylesheet" href="style.css"/>
     </head>
 
