--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </label>
 
             <input type="number" id="input" name="input" min="1" max="200" class="input"/>
-            <input type="submit" value="Submit" id="submit" onclick="capture()" class="input btn"/>
+            <button id="submit" onclick="capture()" class="input btn">Submit</button>
 
         <!--
             <form onsubmit="capture()" id="form">
