--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <meta name="keywords" content="Math, HTML, CSS, JavaScript, Free, Quiz, Addition"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="styles/style.css"/>
     </head>
 
-    <body onload="main()">
+    <body>
         <header class="header">
             <h1>Math Quiz</h1>
         </header>
@@ -39,8 +39,9 @@
                             <span id="num1">num1</span><span> + </span><span id="num2">num2</span> <span> = </span>
                         </label>
             
-                        <input type="number" id="input" name="input" min="1" max="200" class="input text"/>
-                        <button id="submit" onclick="capture()" class="input btn">Submit</button>
+                        <input type="number" id="input" name="input" min="1" max="200" class="input text" />
+
+                        <button id="submit" class="input btn">Submit</button>
     
                         <div id="response"></div>
                     </div>
@@ -65,6 +66,6 @@
             <p>A simple addition practice quiz site.</p>
         </footer>
 
-        <script src="app.js"></script>
+        <script src="build/app.js"></script>
     </body>
 </html>
