Offline navigation with a service worker successful

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <p>A simple addition practice quiz site.</p>
         </footer>
 
-        <script src="build/app.js"></script>
+        <script src="app.js"></script>
+        <script src="serviceWorkerRegistration.js"></script>
     </body>
 </html>
