--- a/second.html
+++ b/second.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
 
-    <a href="/">Main page</a>
+    <body>
+
+        <a href="/">Main page</a>
+        
+    </body>
+
+    <script src="build/serviceWorkerRegistration.js"></script>
     
-</body>
 </html>
