--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
     <body>
         <header class="header">
+
             <h1>Math Quiz</h1>
+
+            <button>Install</button>
+            
         </header>
 
         <main>
