--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Math Quiz</title>
+
+        <title>ByteSized Math</title>
 
         <meta charset="UTF-8"/>
         <meta name="description" content="This is a free math addition quiz site"/>
         <meta name="keywords" content="Math, HTML, CSS, JavaScript, Free, Quiz, Addition"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+        <link rel="manifest" href="manifest.json" />
+
+        <link rel="icon" href="icons/bytesized-orange.png" />
+
         <link rel="stylesheet" href="styles/style.css"/>
+
     </head>
 
     <body>
@@ -16,8 +22,8 @@
 
             <h1>Math Quiz</h1>
 
-            <button>Install</button>
-            
+            <button id="install-button">Install</button>
+
         </header>
 
         <main>
